parser/y.output

state 0
	$accept: .input $end 

	SELECT  shift 7
	.  error

	input  goto 1
	select_stmt  goto 2
	select_compound  goto 3
	select_core  goto 4
	select_select  goto 5
	select_select_head  goto 6

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  select_stmt.    (1)

	.  reduce 1 (src line 38)


state 3
	select_stmt:  select_compound.select_order select_limit_offset 
	select_order: .    (11)

	ORDER  shift 9
	.  reduce 11 (src line 103)

	select_order  goto 8

state 4
	select_compound:  select_core.    (3)

	.  reduce 3 (src line 48)


state 5
	select_core:  select_select.select_where 
	select_where: .    (9)

	WHERE  shift 11
	.  reduce 9 (src line 87)

	select_where  goto 10

state 6
	select_select:  select_select_head.select_select_tail 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	MULT  shift 13
	LPAREN  shift 30
	NOT  shift 17
	.  error

	select_select_tail  goto 12
	expression  goto 14
	expr  goto 15
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 7
	select_select_head:  SELECT.    (6)

	.  reduce 6 (src line 63)


state 8
	select_stmt:  select_compound select_order.select_limit_offset 
	select_limit_offset: .    (18)

	LIMIT  shift 34
	.  reduce 18 (src line 151)

	select_limit_offset  goto 32
	select_limit  goto 33

state 9
	select_order:  ORDER.BY sorting_list 

	BY  shift 35
	.  error


state 10
	select_core:  select_select select_where.    (4)

	.  reduce 4 (src line 53)


state 11
	select_where:  WHERE.expression 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expression  goto 36
	expr  goto 15
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 12
	select_select:  select_select_head select_select_tail.    (5)

	.  reduce 5 (src line 58)


state 13
	select_select_tail:  MULT.    (7)

	.  reduce 7 (src line 71)


state 14
	select_select_tail:  expression.    (8)

	.  reduce 8 (src line 74)


state 15
	expression:  expr.    (23)
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	PLUS  shift 37
	MINUS  shift 38
	MULT  shift 39
	DIV  shift 40
	AND  shift 41
	OR  shift 42
	LT  shift 44
	LTE  shift 45
	GT  shift 46
	GTE  shift 47
	EQ  shift 43
	NE  shift 48
	.  reduce 23 (src line 197)


state 16
	expr:  prefix_expr.    (36)

	.  reduce 36 (src line 298)


state 17
	prefix_expr:  NOT.prefix_expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	prefix_expr  goto 49
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 18
	prefix_expr:  suffix_expr.    (38)

	.  reduce 38 (src line 308)


state 19
	suffix_expr:  atom.    (39)

	.  reduce 39 (src line 313)


state 20
	atom:  NULL.    (40)

	.  reduce 40 (src line 318)


state 21
	atom:  property.    (41)

	.  reduce 41 (src line 324)


state 22
	atom:  INT.    (42)

	.  reduce 42 (src line 337)


state 23
	atom:  MINUS.INT 
	atom:  MINUS.REAL 

	INT  shift 50
	REAL  shift 51
	.  error


state 24
	atom:  REAL.    (44)

	.  reduce 44 (src line 347)


state 25
	atom:  STRING.    (46)

	.  reduce 46 (src line 357)


state 26
	atom:  TRUE.    (47)

	.  reduce 47 (src line 362)


state 27
	atom:  FALSE.    (48)

	.  reduce 48 (src line 367)


state 28
	atom:  LBRACE.named_expression_list RBRACE 

	STRING  shift 54
	.  error

	named_expression_list  goto 52
	named_expression_single  goto 53

state 29
	atom:  LBRACKET.expression_list RBRACKET 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expression  goto 56
	expr  goto 15
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21
	expression_list  goto 55

state 30
	atom:  LPAREN.expression RPAREN 
	atom:  LPAREN.select_stmt RPAREN 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	SELECT  shift 7
	LPAREN  shift 30
	NOT  shift 17
	.  error

	select_stmt  goto 58
	select_compound  goto 3
	select_core  goto 4
	select_select  goto 5
	select_select_head  goto 6
	expression  goto 57
	expr  goto 15
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 31
	property:  IDENTIFIER.    (58)
	property:  IDENTIFIER.DOT property 

	DOT  shift 59
	.  reduce 58 (src line 434)


state 32
	select_stmt:  select_compound select_order select_limit_offset.    (2)

	.  reduce 2 (src line 43)


state 33
	select_limit_offset:  select_limit.    (19)
	select_limit_offset:  select_limit.select_offset 

	OFFSET  shift 61
	.  reduce 19 (src line 155)

	select_offset  goto 60

state 34
	select_limit:  LIMIT.expression 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expression  goto 62
	expr  goto 15
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 35
	select_order:  ORDER BY.sorting_list 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expression  goto 65
	sorting_list  goto 63
	sorting_single  goto 64
	expr  goto 15
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 36
	select_where:  WHERE expression.    (10)

	.  reduce 10 (src line 91)


state 37
	expr:  expr PLUS.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 66
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 38
	expr:  expr MINUS.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 67
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 39
	expr:  expr MULT.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 68
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 40
	expr:  expr DIV.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 69
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 41
	expr:  expr AND.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 70
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 42
	expr:  expr OR.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 71
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 43
	expr:  expr EQ.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 72
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 44
	expr:  expr LT.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 73
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 45
	expr:  expr LTE.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 74
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 46
	expr:  expr GT.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 75
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 47
	expr:  expr GTE.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 76
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 48
	expr:  expr NE.expr 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expr  goto 77
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 49
	prefix_expr:  NOT prefix_expr.    (37)

	.  reduce 37 (src line 304)


state 50
	atom:  MINUS INT.    (43)

	.  reduce 43 (src line 342)


state 51
	atom:  MINUS REAL.    (45)

	.  reduce 45 (src line 352)


state 52
	atom:  LBRACE named_expression_list.RBRACE 

	RBRACE  shift 78
	.  error


state 53
	named_expression_list:  named_expression_single.    (55)
	named_expression_list:  named_expression_single.COMMA named_expression_list 

	COMMA  shift 79
	.  reduce 55 (src line 412)


state 54
	named_expression_single:  STRING.COLON expression 

	COLON  shift 80
	.  error


state 55
	atom:  LBRACKET expression_list.RBRACKET 

	RBRACKET  shift 81
	.  error


state 56
	expression_list:  expression.    (53)
	expression_list:  expression.COMMA expression_list 

	COMMA  shift 82
	.  reduce 53 (src line 392)


state 57
	atom:  LPAREN expression.RPAREN 

	RPAREN  shift 83
	.  error


state 58
	atom:  LPAREN select_stmt.RPAREN 

	RPAREN  shift 84
	.  error


state 59
	property:  IDENTIFIER DOT.property 

	IDENTIFIER  shift 31
	.  error

	property  goto 85

state 60
	select_limit_offset:  select_limit select_offset.    (20)

	.  reduce 20 (src line 159)


state 61
	select_offset:  OFFSET.expression 

	INT  shift 22
	REAL  shift 24
	STRING  shift 25
	TRUE  shift 26
	FALSE  shift 27
	NULL  shift 20
	IDENTIFIER  shift 31
	LBRACKET  shift 29
	LBRACE  shift 28
	MINUS  shift 23
	LPAREN  shift 30
	NOT  shift 17
	.  error

	expression  goto 86
	expr  goto 15
	prefix_expr  goto 16
	suffix_expr  goto 18
	atom  goto 19
	property  goto 21

state 62
	select_limit:  LIMIT expression.    (21)

	.  reduce 21 (src line 165)


state 63
	select_order:  ORDER BY sorting_list.    (12)

	.  reduce 12 (src line 105)


state 64
	sorting_list:  sorting_single.    (13)
	sorting_list:  sorting_single.COMMA sorting_list 

	COMMA  shift 87
	.  reduce 13 (src line 111)


state 65
	sorting_single:  expression.    (15)
	sorting_single:  expression.ASC 
	sorting_single:  expression.DESC 

	ASC  shift 88
	DESC  shift 89
	.  reduce 15 (src line 120)


state 66
	expr:  expr.PLUS expr 
	expr:  expr PLUS expr.    (24)
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	.  reduce 24 (src line 202)


state 67
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr MINUS expr.    (25)
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	.  reduce 25 (src line 210)


state 68
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr MULT expr.    (26)
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	.  reduce 26 (src line 218)


state 69
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr DIV expr.    (27)
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	.  reduce 27 (src line 226)


state 70
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr AND expr.    (28)
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	PLUS  shift 37
	MINUS  shift 38
	MULT  shift 39
	DIV  shift 40
	LT  shift 44
	LTE  shift 45
	GT  shift 46
	GTE  shift 47
	EQ  shift 43
	NE  shift 48
	.  reduce 28 (src line 234)


state 71
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr OR expr.    (29)
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	PLUS  shift 37
	MINUS  shift 38
	MULT  shift 39
	DIV  shift 40
	AND  shift 41
	LT  shift 44
	LTE  shift 45
	GT  shift 46
	GTE  shift 47
	EQ  shift 43
	NE  shift 48
	.  reduce 29 (src line 242)


state 72
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr EQ expr.    (30)
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	PLUS  shift 37
	MINUS  shift 38
	MULT  shift 39
	DIV  shift 40
	.  reduce 30 (src line 250)


state 73
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr LT expr.    (31)
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	PLUS  shift 37
	MINUS  shift 38
	MULT  shift 39
	DIV  shift 40
	.  reduce 31 (src line 258)


state 74
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr LTE expr.    (32)
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	PLUS  shift 37
	MINUS  shift 38
	MULT  shift 39
	DIV  shift 40
	.  reduce 32 (src line 266)


state 75
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr GT expr.    (33)
	expr:  expr.GTE expr 
	expr:  expr.NE expr 

	PLUS  shift 37
	MINUS  shift 38
	MULT  shift 39
	DIV  shift 40
	.  reduce 33 (src line 274)


state 76
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr GTE expr.    (34)
	expr:  expr.NE expr 

	PLUS  shift 37
	MINUS  shift 38
	MULT  shift 39
	DIV  shift 40
	.  reduce 34 (src line 282)

